--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500&family=Outfit:wght@400;500;600;700&display=swap");
 /* ===== Global ===== */
 :root {
-  --primary: #f89d13;
-  --secondary: #8f1d14;
+  --primary: #eab208;
   --black: #1b120f;
-  --white: #f4f4f5;
+  --white: #fafaf9;
+  --gray: #f4f4f5;
   --font-primary: "Cabin";
-  --font-secondary: "Ubuntu";
+  --font-secondary: "Outfit";
   --font-fallback: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -23,9 +23,9 @@
 }
 html {
   tab-size: 4;
-  font-family: var(--font-primary), var(--font-fallback);
+  font-family: var(--font-primary), var(--font-fallback) !important;
   line-height: 1.5;
-  background-color: var(--white);
+  background-color: var(--gray);
 }
 body,
 h1,
@@ -38,6 +38,7 @@ hr,
 figure,
 p {
   margin: 0;
+  font-size: inherit;
   font-family: inherit;
   line-height: inherit;
 }
@@ -76,7 +77,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-secondary), var(--font-fallback);
-  font-weight: 500;
+  font-weight: 600;
 }
 img,
 svg,
@@ -104,8 +105,6 @@ video {
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 }
 
@@ -118,8 +117,6 @@ video {
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
-    padding-left: 4rem;
-    padding-right: 4rem;
   }
 }
 
