--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,52 @@ video {
   height: auto;
 }
 /* ===== Components ===== */
+.menu-icon {
+  --color: var(--black);
+  width: 2rem;
+  height: 2rem;
+  display: block;
+  position: relative;
+}
+.menu-icon > span,
+.menu-icon:before,
+.menu-icon:after {
+  width: 100%;
+  height: 3px;
+  transform-origin: center;
+  background-color: var(--color);
+  transition: opacity 95ms;
+  position: absolute;
+  top: calc(50% - 3px);
+  left: 0;
+}
+.menu-icon:before,
+.menu-icon:after {
+  content: "";
+  transition: transform 95ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.menu-icon:before {
+  transform: translate3d(0, -10px, 0) rotate(0);
+}
+.menu-icon:after {
+  transform: translate3d(0, 10px, 0) rotate(0);
+}
+.menu-icon.is-open span {
+  opacity: 0;
+}
+.menu-icon.is-open:before {
+  transform: translate3d(0, 0, 0) rotate(45deg);
+}
+.menu-icon.is-open:after {
+  transform: translate3d(0, 0, 0) rotate(-45deg);
+}
+.user-email {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100px;
+}
+
 .container {
   width: 100%;
   padding-left: 1rem;
@@ -177,4 +223,13 @@ video {
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
+}
+
+@media screen and (max-width: 768px) {
+  #sidebar {
+    width: 100vw;
+  }
+  #header.open::before {
+    width: 100vw;
+  }
 }
