--- a/css/utilities.css
+++ b/css/utilities.css
@@ -174,6 +174,62 @@
 .hidden {
   display: none;
 }
+.top-auto {
+  top: auto;
+}
+.bg-white {
+  background-color: var(--white);
+}
+.w-16 {
+  width: 4rem;
+}
+.shadow-xl {
+  box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+}
+.mb-20 {
+  margin-bottom: 5rem;
+}
+.-shadow-md {
+  box-shadow: 0 -4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+.h-16 {
+  height: 4rem;
+}
+.grid-cols-span-3 {
+  grid-template-columns: 1fr 1fr 1.2fr;
+}
+.w-4 {
+  width: 1rem;
+}
+.absolute {
+  position: absolute;
+}
+.left-0 {
+  left: 0;
+}
+.right-0 {
+  right: 0;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.bottom-12 {
+  bottom: 3rem;
+}
+.place-items-center {
+  place-items: center;
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.h-24 {
+  height: 6rem;
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
 @media screen and (max-width: 768px) {
   .sm-hidden {
     display: none;
