--- a/product/style.css
+++ b/product/style.css
@@ -8,7 +8,7 @@ Body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom:1px solid rgba(0, 0, 0, 0.356);
+
     padding: 40px;
 }
 
@@ -23,12 +23,24 @@ Body{
     font-family:var(--font-fallback);
 }
 
+.shop-section{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border: 1px solid #80808033;
+    border-radius: 9px;
+}
+
 .sidebar{
-    width: 70%;
-    border-right: 1px solid rgba(0, 0, 0, 0.356);
+    width: 74%;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border: 1px solid #80808033;
+    border-radius: 9px;
+    height: 75%;
 }
 .section-sidebar{
     margin: 60px 30px;
+    overflow-y: scroll;
+    height: 60%;
+
 }
 /* start category */
 .categori{
@@ -228,6 +240,7 @@ Body{
     display: grid;
     grid-template-columns: repeat(3,282px);
     gap: 20px;
+    margin-left:20px;
 }
 
 .card-shop{
