--- a/product/style.css
+++ b/product/style.css
@@ -346,7 +346,7 @@ Body{
 .color-list ul li .option1{
   height: 13px;
   width: 13px;
-  background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
+  background-color: cadetblue;
   border-radius: 50%;
   display: inline-block;
   cursor:pointer;
@@ -354,7 +354,7 @@ Body{
 .color-list ul li .option2{
     height: 13px;
     width: 13px;
-    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(110, 250, 147,1));
+    background-color: antiquewhite;
     border-radius: 50%;
     display: inline-block;
     cursor:pointer;
@@ -362,7 +362,7 @@ Body{
   .color-list ul li .option3{
     height: 13px;
     width: 13px;
-    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(41, 30, 199,1));
+    background-color: aqua;
     border-radius: 50%;
     display: inline-block;
     cursor:pointer;
@@ -370,7 +370,7 @@ Body{
   .color-list ul li .option4{
     height: 13px;
     width: 13px;
-    background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255, 225, 0,1));
+    background-color: aquamarine;
     border-radius: 50%;
     display: inline-block;
     cursor:pointer;
@@ -387,7 +387,7 @@ Body{
 }
 
 .color-list .active:after{
-    content="";
+    content:"";
     width:22px;
     height:22px;
     border:1px solid #8888;
@@ -424,3 +424,4 @@ Body{
     border-radius:50%;
     cursor:pointer;
 }
+
