--- a/css/main.css
+++ b/css/main.css
@@ -140,7 +140,74 @@ video {
   white-space: nowrap;
   width: 100px;
 }
-
+#side-bar {
+  width: 30vw;
+  height: 100vh;
+  left: auto;
+  padding-top: 5rem;
+  padding-bottom: 7.5rem;
+  pointer-events: none;
+}
+#side-bar.auth .user-guest,
+#side-bar .user-area {
+  visibility: hidden;
+  opacity: 0;
+  height: 0;
+  display: none;
+}
+#side-bar.auth .user-area,
+#side-bar .user-guest {
+  visibility: visible;
+  opacity: 1;
+  height: max-content;
+  display: flex;
+}
+#side-bar.is-open {
+  pointer-events: all;
+}
+#side-bar > nav {
+  opacity: 0;
+  transition-duration: 0.5s;
+  transition-delay: 0.3s;
+  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
+}
+#side-bar.is-open > nav {
+  opacity: 1;
+  transition-duration: 0.3s;
+  transition-delay: 0.5s;
+  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
+}
+#side-bar::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black);
+  transform: translateX(100%);
+  transition-duration: 0.8s;
+  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
+}
+#side-bar.is-open::before {
+  transform: translateX(0) translateX(0);
+}
+.nav-link {
+  display: block;
+  padding: 0.75rem 1rem;
+  color: var(--gray);
+  text-transform: capitalize;
+  background-color: rgba(244, 244, 245, 0.1);
+  opacity: 0.8;
+}
+.nav-link:hover {
+  background-color: rgba(244, 244, 245, 0.2);
+}
+.nav-link.current {
+  opacity: 1;
+  border-bottom-width: 2px;
+}
 .container {
   width: 100%;
   padding-left: 1rem;
@@ -226,10 +293,10 @@ video {
 }
 
 @media screen and (max-width: 768px) {
-  #sidebar {
+  #side-bar {
     width: 100vw;
   }
-  #header.open::before {
-    width: 100vw;
+  #side-bar.auth {
+    padding-top: 0;
   }
 }
