--- a/product/style.css
+++ b/product/style.css
@@ -1,472 +1,473 @@
-Body{
-    overflow-x: hidden;
+Body {
+  overflow-x: hidden;
 }
 
 /* start sidebar top */
-.sidebar-top{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    padding: 40px;
+.sidebar-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
-.sidebar-top h1{
-    font-size: 50px;
+.sidebar-top h1 {
+  font-size: 50px;
 }
 /* end sidebar top */
 
-.content_wrapper{
-    display: grid;
-    grid-template-columns: repeat(2,376px);
-    font-family:var(--font-fallback);
+.content_wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  font-family: var(--font-fallback);
 }
 
-.shop-section{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    border: 1px solid #80808033;
-    border-radius: 9px;
+.shop-section {
+  grid-column: span 3 / span 3;
+  /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+  /* border: 1px solid #80808033; */
+  border-radius: 9px;
 }
 
-.sidebar{
-    width: 74%;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    border: 1px solid #80808033;
-    border-radius: 9px;
-    height: 75%;
+.sidebar {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+  border: 1px solid #80808033;
+  border-radius: 9px;
+  height: max-content;
 }
-.section-sidebar{
-    margin: 60px 30px;
-    overflow-y: scroll;
-    height: 60%;
-   
+.section-sidebar {
+  margin: 60px 30px;
+  /* overflow-y: scroll; */
+  /* height: 60%; */
 }
 
 .section-sidebar::-webkit-scrollbar-track {
-    border: 1px solid #000;
-    padding: 2px 0;
-    border-radius: 40px;
+  /* border: 1px solid #000; */
+  padding: 2px 0;
+  border-radius: 40px;
 }
-  
-  .section-sidebar::-webkit-scrollbar {
-    width: 10px;
+
+.section-sidebar::-webkit-scrollbar {
+  width: 10px;
 }
-  
-  .section-sidebar::-webkit-scrollbar-thumb {
-    border-radius: 40px;
-    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #737272;
-    border: 1px solid #000;
+
+.section-sidebar::-webkit-scrollbar-thumb {
+  border-radius: 40px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #737272;
+  border: 1px solid #000;
 }
 /* start category */
-.sidebar-wrap{
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 3px;
+.sidebar-wrap {
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  margin-right: 10px;
+  padding-left: 3px;
 }
-.categori{
-    cursor: pointer;
-    border-radius: 50px;
-    display: flex;
-    margin: 10px 0;
-    align-items: center;
-    }
-    
-    .categori .icons{
-    
-    margin: 6px 0px 0 0;
-    width: 30px;
-    height: 30px;
-    color: #000000;
-    float: left;
-    text-align: center;
-    border-radius: 50px;
-    transition: all .3s ease-in;
-    
-    }
-    
-    .categori h5 {
-        font-size: 18px;
-        margin: 0;
-        padding: 7px 0px 7px 0;
-        font-weight: 900;
-    }
-    
-    .list-categori{
+.categori {
+  cursor: pointer;
+  border-radius: 50px;
+  display: flex;
+  margin: 10px 0;
+  align-items: center;
+}
 
-    margin-left: 25px;
-    font-size: 14px;
-    text-align: justify;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    max-height: 0px;
-    transition: all .3s ease-in ;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-    }
+.categori .icons {
+  margin: 6px 0px 0 0;
+  width: 30px;
+  height: 30px;
+  color: #000000;
+  float: left;
+  text-align: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in;
+}
 
-    .list-categori ul li a{
-        font-size: 16px;
-        font-weight:300;
-        font-family: var( --font-primary);
-    }
+.categori h5 {
+  font-size: 18px;
+  margin: 0;
+  padding: 7px 0px 7px 0;
+  font-weight: 900;
+}
+
+.list-categori {
+  margin-left: 25px;
+  font-size: 14px;
+  text-align: justify;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  max-height: 0px;
+  transition: all 0.3s ease-in;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.list-categori ul li a {
+  font-size: 16px;
+  font-weight: 300;
+  font-family: var(--font-primary);
+}
 /* end category */
 /* start filter price */
-.sidebar-warp-2{
-    margin-top: 30px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 3px;
+.sidebar-warp-2 {
+  margin-top: 30px;
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  margin-right: 10px;
+  padding-left: 3px;
 }
-.sidebar-warp-2 h1{
-    font-size: 18px;
-    margin: 0;
-    padding: 7px 0px 7px 0;
-    font-weight: 900;
-    
+.sidebar-warp-2 h1 {
+  font-size: 18px;
+  margin: 0;
+  padding: 7px 0px 7px 0;
+  font-weight: 900;
 }
-.price-box{
-    padding-left:4px;
+.price-box {
+  padding-left: 4px;
 }
-.price-box .slide input{
-    width: 90%;
-    margin-bottom: 20px;
-    -webkit-appearance: none;
-    outline: none;
-    background-color: #cec8c875;
-    border-radius: 6px;
+.price-box .slide input {
+  width: 90%;
+  margin-bottom: 20px;
+  -webkit-appearance: none;
+  outline: none;
+  background-color: #cec8c875;
+  border-radius: 6px;
 }
 .slide input::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 16px;
-    height: 16px;
-    background: rgb(219, 215, 215);
-    border: 3px solid black;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-.price{
-    display: flex;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: rgb(219, 215, 215);
+  border: 3px solid black;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.price {
+  display: flex;
 }
 
 .price p {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .price-text-1 p {
-    background-color: var(--primary);
-    color: aliceblue;
-    padding: 9px 12px;
-    margin-right: 8px; 
-    cursor: pointer;
-    padding-bottom:8px;
+  background-color: var(--primary);
+  color: aliceblue;
+  padding: 9px 12px;
+  margin-right: 8px;
+  cursor: pointer;
+  padding-bottom: 8px;
 }
-.price-text-2{
-    margin-top:7px;
-    font-size: 18px;
-    color: black;
+.price-text-2 {
+  margin-top: 7px;
+  font-size: 18px;
+  color: black;
 }
-.price-text-2::before{
-    content: "price: $";
+.price-text-2::before {
+  content: "price: $";
 }
-.price-text-2::after{
-    content: "-$40";
+.price-text-2::after {
+  content: "-$40";
 }
 .option-color ul {
-    list-style: none;
+  list-style: none;
 }
 
-.opition-1{
-    background-color: aqua;
+.opition-1 {
+  background-color: aqua;
 }
-.opition-1 span{
-    display: none;
+.opition-1 span {
+  display: none;
 }
-.opition-1 span::before{
-    content: "";
-    border: 2px solid;
-    padding: 2px;
-    display: block;
-    border-radius: 50%;
-    position: absolute;
-    top: -4px;
-    bottom: -4px;
-    left: -4px;
-    right: -4px;
-    border-color: transparent;
+.opition-1 span::before {
+  content: "";
+  border: 2px solid;
+  padding: 2px;
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: -4px;
+  bottom: -4px;
+  left: -4px;
+  right: -4px;
+  border-color: transparent;
 }
 
 /* end filter price */
 /* start color */
 .sidear-wrap-3 {
-    margin-top: 30px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 3px;
+  margin-top: 30px;
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  margin-right: 10px;
+  padding-left: 3px;
 }
-.sidear-wrap-3 h1{
-    font-size: 18px;
-    margin: 0;
-    padding: 7px 0px 7px 0;
-    font-weight: 900;
+.sidear-wrap-3 h1 {
+  font-size: 18px;
+  margin: 0;
+  padding: 7px 0px 7px 0;
+  font-weight: 900;
 }
-.sidear-wrap-3 ul{
-    padding: 10px 0px;
-    border-radius: 30px;
-    margin-left: 6px;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+.sidear-wrap-3 ul {
+  padding: 10px 0px;
+  border-radius: 30px;
+  margin-left: 6px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 .sidear-wrap-3 ul li {
-    display: inline-block;
-    margin-bottom: 10px;
-    margin-left: 7px;
-   
+  display: inline-block;
+  margin-bottom: 10px;
+  margin-left: 7px;
 }
 .option-color {
-    padding: 3px 7px;
-    border-radius: 60%;
-    
+  padding: 3px 7px;
+  border-radius: 60%;
 }
 /* end color */
 /* start gender */
-.sidebar-wrap-4{
-    margin-top: 30px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 9px;
-    padding-bottom:8px;
+.sidebar-wrap-4 {
+  margin-top: 30px;
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  margin-right: 10px;
+  padding-left: 9px;
+  padding-bottom: 8px;
 }
 
-.sidebar-wrap-4 button{
-    border: 1px solid var(--primary);
-    padding: 7px;
-    font-weight: 700;
-    color: rgb(88, 85, 85);
-    border-radius: 4px;
-    margin-top: 8px;
-    transition: .4s all;
+.sidebar-wrap-4 button {
+  border: 1px solid var(--primary);
+  padding: 7px;
+  font-weight: 700;
+  color: rgb(88, 85, 85);
+  border-radius: 4px;
+  margin-top: 8px;
+  transition: 0.4s all;
 }
 
-.sidebar-wrap-4 button:hover{
-    background-color: var(--primary);
-    color: aliceblue;
+.sidebar-wrap-4 button:hover {
+  background-color: var(--primary);
+  color: aliceblue;
 }
 .sidebar-wrap-4 h1 {
-    font-size: 18px;
-    margin: 0;
-    padding: 7px 0px 7px 0;
-    font-weight: 900;
+  font-size: 18px;
+  margin: 0;
+  padding: 7px 0px 7px 0;
+  font-weight: 900;
 }
 /* end gender */
 /* start size */
-.sidebar-wrap-5{
-    margin-top: 30px;
-    border: 1px solid black;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding-left: 3px;
-    
+.sidebar-wrap-5 {
+  margin-top: 30px;
+  /* border: 1px solid black; */
+  border-radius: 10px;
+  margin-right: 10px;
+  padding-left: 3px;
 }
 .sidebar-wrap-5 h1 {
-    font-size: 18px;
-    margin: 0;
-    padding: 7px 0px 7px 0;
-    font-weight: 900;
+  font-size: 18px;
+  margin: 0;
+  padding: 7px 0px 7px 0;
+  font-weight: 900;
 }
 /* end size */
 /* start section grup */
-.sections_group{
-    display: grid;
-    grid-template-columns: repeat(3,282px);
-    gap: 20px;
-    margin-left:20px;
+.sections_group {
+  display: grid;
+  grid-template-columns: repeat(3, 282px);
+  gap: 20px;
+  margin-left: 20px;
 }
 
-.card-shop{
-    height: 100px;
+.card-shop {
+  height: 100px;
 }
-.post-shop{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    border-radius: 10px;
+.post-shop {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 10px;
 }
 
-.all-shop{
-    padding: 18px;
-    background-color:var(--main-color);
-    border-radius: 10px;
+.all-shop {
+  padding: 18px;
+  background-color: var(--main-color);
+  border-radius: 10px;
 }
-.readmore-wrap{
-    max-height: 200px !important;
-    margin-bottom:7px !important;
+.readmore-wrap {
+  max-height: 200px !important;
+  margin-bottom: 7px !important;
 }
 .readmore {
-    display: none;
-  }
-  
-  .desc {
-    opacity: 0;
-    max-height: 0;
-    font-size: 0;
-    transition: .3s ease-in-out;
-  }
-  
-  .readmore:checked ~ .readmore-wrap .desc {
-    opacity: 1;
-    font-size: inherit;
-    max-height: 100px;
-  }
-  
-  .readmore ~ .trigger:before {
-    content: 'Show more';
-  }
+  display: none;
+}
+
+.desc {
+  opacity: 0;
+  max-height: 0;
+  font-size: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.readmore:checked ~ .readmore-wrap .desc {
+  opacity: 1;
+  font-size: inherit;
+  max-height: 100px;
+}
+
+.readmore ~ .trigger:before {
+  content: "Show more";
+}
 .trigger {
-    color: red;
-    font-size: 14px;
-    font-weight: 600;
+  color: red;
+  font-size: 14px;
+  font-weight: 600;
 }
-.desc a:hover{
-    text-decoration: underline;
+.desc a:hover {
+  text-decoration: underline;
 }
-.text{
-    margin: 40px;
-}
-
-.category-name h1{
-    font-size: 20px;
-    text-decoration: underline;
-    padding-bottom: 10px;
+.text {
+  margin: 40px;
 }
 
-.tgl h1{
-    font-size: 13px
+.category-name h1 {
+  font-size: 20px;
+  text-decoration: underline;
+  padding-bottom: 10px;
 }
 
-.tgl{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 14px;
+.tgl h1 {
+  font-size: 13px;
+}
+
+.tgl {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 14px;
 }
 
 .tgl span {
-    font-size: 13px;
+  font-size: 13px;
 }
 .tgl span i {
-    padding-right: 4px;
+  padding-right: 4px;
 }
-.post-img{
-    background-image: url("https://static.mammut.com/cdn-cgi/image/width=1000,quality=50,f=auto,metadata=none/master/1016-00800-50031_main-grey_229965.jpg");   /* First Image URL */
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 250px;
-    height: 250px;
-    border-radius:10px;
-    transition: 0.5s ease;
-    margin-bottom:10px;
+.post-img {
+  background-image: url("https://static.mammut.com/cdn-cgi/image/width=1000,quality=50,f=auto,metadata=none/master/1016-00800-50031_main-grey_229965.jpg"); /* First Image URL */
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  transition: 0.5s ease;
+  margin-bottom: 10px;
 }
-.post-img:hover{
-    background-image: url("https://static.mammut.com/cdn-cgi/image/width=1000,quality=50,f=auto,metadata=none/master/1016-00800-50031_mod-main-hf-png_236959.png");  /* Second Image URL */
+.post-img:hover {
+  background-image: url("https://static.mammut.com/cdn-cgi/image/width=1000,quality=50,f=auto,metadata=none/master/1016-00800-50031_mod-main-hf-png_236959.png"); /* Second Image URL */
 }
 
 .cate {
-    font-weight: 600;
-    font-size: 14px;
-    padding: 8px 0px;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 8px 0px;
 }
-.cate ul li,.color-list ul li {
-    display:inline-block;
-}
-
-.color-list{
-    display:flex;
-    justify-content:center;
+.cate ul li,
+.color-list ul li {
+  display: inline-block;
 }
 
-.color-list ul li .option1{
+.color-list {
+  display: flex;
+  justify-content: center;
+}
+
+.color-list ul li .option1 {
   height: 13px;
   width: 13px;
   background-color: cadetblue;
   border-radius: 50%;
   display: inline-block;
-  cursor:pointer;
+  cursor: pointer;
 }
-.color-list ul li .option2{
-    height: 13px;
-    width: 13px;
-    background-color: antiquewhite;
-    border-radius: 50%;
-    display: inline-block;
-    cursor:pointer;
-  }
-  .color-list ul li .option3{
-    height: 13px;
-    width: 13px;
-    background-color: aqua;
-    border-radius: 50%;
-    display: inline-block;
-    cursor:pointer;
-  }
-  .color-list ul li .option4{
-    height: 13px;
-    width: 13px;
-    background-color: aquamarine;
-    border-radius: 50%;
-    display: inline-block;
-    cursor:pointer;
-  }
+.color-list ul li .option2 {
+  height: 13px;
+  width: 13px;
+  background-color: antiquewhite;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+.color-list ul li .option3 {
+  height: 13px;
+  width: 13px;
+  background-color: aqua;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
+.color-list ul li .option4 {
+  height: 13px;
+  width: 13px;
+  background-color: aquamarine;
+  border-radius: 50%;
+  display: inline-block;
+  cursor: pointer;
+}
 /* end section grup */
-.Filter{
+.Filter {
   background-color: var(--primary);
   border-radius: 7px;
-
 }
 
-.color-list{
-    display:flex;
+.color-list {
+  display: flex;
 }
 
-.color-list .active:after{
-    content:"";
-    width:22px;
-    height:22px;
-    border:1px solid #8888;
-    border-radius:50%;
-    color:white;
+.color-list .active:after {
+  content: "";
+  width: 22px;
+  height: 22px;
+  border: 1px solid #8888;
+  border-radius: 50%;
+  color: white;
 }
 
-.option-color-1{
-    padding-left:10px;
-    margin-left:10px;
-    border-radius:50%;
+.option-color-1 {
+  padding-left: 10px;
+  margin-left: 10px;
+  border-radius: 50%;
 }
 
 #red {
-    background-color:red;
-    color:red;
-    padding:1px 5px;
-    border-radius:50%;
-    cursor:pointer;
+  background-color: red;
+  color: red;
+  padding: 1px 5px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 #black {
-    background-color:black;
-    color:black;
-    padding:1px 5px;
-    border-radius:50%;
-    cursor:pointer;
+  background-color: black;
+  color: black;
+  padding: 1px 5px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-#yellow{
-    background-color:yellow;
-    color:yellow;
-    padding:1px 5px;
-    border-radius:50%;
-    cursor:pointer;
+#yellow {
+  background-color: yellow;
+  color: yellow;
+  padding: 1px 5px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
+/* Custom */
+.harga {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
