--- a/product/style.css
+++ b/product/style.css
@@ -419,6 +419,7 @@ Body {
 .Filter {
   background-color: var(--primary);
   border-radius: 7px;
+  padding:12px;
 }
 
 .color-list {
@@ -496,8 +497,46 @@ Body {
 
 @media screen and (max-width:725px)
 {
-.sidebar{
-    display: none;
+  .sidebar {
+    position: absolute;
+    background: white;
+    width: 71%;
+    height: 67%;
+    top: 218px;
+    left: 89px;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+  }
+
+  .sidebar.active {
+    transform: translate(-1%, -2%) scale(1);
+  }
+
+.sidebar-close{
+
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 1.25rem;
+  font-weight: bold;
+
+}
+
+#overlay{
+  position:fixed;
+  bottom:0px;
+  top:0px;
+  left:0px;
+  right:0px;
+  opacity:0;
+  background-color:rgba(0,0,0,0.5);
+  z-index:-1;
+}
+
+#overlay.active{
+  opacity:1;
+  pointer-events:all;
 }
 }
 
@@ -510,7 +549,7 @@ Body {
         margin-left: 20px;
     }
     .sidebar{
-        display: none;
+      
     }
 }
 
