--- a/product/style.css
+++ b/product/style.css
@@ -3,6 +3,9 @@ Body {
 }
 
 /* start sidebar top */
+.sidebar-close{
+  display:none;
+}
 .sidebar-top {
   display: flex;
   flex-direction: column;
@@ -497,10 +500,12 @@ Body {
 
 @media screen and (max-width:725px)
 {
+
   .sidebar {
     position: absolute;
-    background: white;
-    width: 71%;
+    background-color:var( --primary);
+    color:white;
+    width: 100%;
     height: 67%;
     top: 218px;
     left: 89px;
@@ -513,7 +518,7 @@ Body {
   }
 
 .sidebar-close{
-
+  display:block;
   cursor: pointer;
   border: none;
   outline: none;
@@ -529,8 +534,8 @@ Body {
   top:0px;
   left:0px;
   right:0px;
-  opacity:0;
-  background-color:rgba(0,0,0,0.5);
+
+  
   z-index:-1;
 }
 
