--- a/product/style.css
+++ b/product/style.css
@@ -503,12 +503,12 @@ Body {
 
   .sidebar {
     position: absolute;
-    background-color:var( --primary);
-    color:white;
-    width: 100%;
-    height: 67%;
+    background-color: aliceblue;
+    color:black;
+    width: 90%;
+    height: 100%;
     top: 218px;
-    left: 89px;
+    left: 28px;
     transform: translate(-50%, -50%) scale(0);
     transition: 200ms ease-in-out;
   }
