--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 :root {
   --primary: #eab208;
   --black: #1b120f;
-  --white: #fafaf9;
+  --white: #fdfdfc;
   --gray: #f4f4f5;
   --font-primary: "Cabin";
   --font-secondary: "Outfit";
@@ -25,7 +25,7 @@ html {
   tab-size: 4;
   font-family: var(--font-primary), var(--font-fallback) !important;
   line-height: 1.5;
-  background-color: var(--gray);
+  background-color: var(--white);
 }
 body,
 h1,
@@ -70,6 +70,12 @@ a {
   color: inherit;
   text-decoration: inherit;
 }
+input {
+  background-color: transparent;
+}
+input:focus {
+  outline: none;
+}
 h1,
 h2,
 h3,
@@ -100,8 +106,8 @@ main {
 /* ===== Components ===== */
 .menu-icon {
   --color: var(--black);
-  width: 2rem;
-  height: 2rem;
+  width: 1.75rem;
+  height: 1.5rem;
   display: block;
   position: relative;
 }
@@ -109,7 +115,7 @@ main {
 .menu-icon:before,
 .menu-icon:after {
   width: 100%;
-  height: 3px;
+  height: 2.5px;
   transform-origin: center;
   background-color: var(--color);
   transition: opacity 95ms;
@@ -144,9 +150,10 @@ main {
   width: 100px;
 }
 #side-bar {
-  width: 30vw;
+  width: 0;
   height: 100vh;
   left: auto;
+  z-index: 75;
   padding-top: 5rem;
   padding-bottom: 7.5rem;
   pointer-events: none;
@@ -170,7 +177,7 @@ main {
 }
 #side-bar > nav {
   opacity: 0;
-  transition-duration: 0.5s;
+  transition-duration: 0.2s;
   transition-delay: 0.3s;
   transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
 }
@@ -301,5 +308,9 @@ main {
   }
   #side-bar.auth {
     padding-top: 0;
+  }
+  .sm-text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
