--- a/product/style.css
+++ b/product/style.css
@@ -32,17 +32,39 @@ Body {
   border-radius: 9px;
 }
 
+.shop-title{
+  display: flex;
+  justify-content: space-evenly;
+  align-items:center ;
+}
+
 .sidebar {
   width: 100%;
   position: sticky;
   top: 0;
   /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
-  border: 1px solid #80808033;
+  border-right: 1px solid #80808033;
   border-radius: 9px;
   height: max-content;
+  margin-top: 37px;
+}
+
+.title-sidebar{
+  font-size: 18px;
+  text-transform: uppercase;
+  background-color: #5555553f;
+  padding-left: 6px;
+  margin-bottom: 6px;
+}
+
+.clear-sidebar{
+  font-size: 18px;
+  text-transform: uppercase;
+  background-color: #5555553f;
+  padding-left: 6px;
 }
 .section-sidebar {
-  margin: 60px 30px;
+  /* margin: 60px 30px; */
   /* overflow-y: scroll; */
   /* height: 60%; */
 }
@@ -97,21 +119,52 @@ Body {
 }
 
 .list-categori {
-  margin-left: 25px;
+  /* margin-left: 5px; */
   font-size: 14px;
   text-align: justify;
   display: flex;
   justify-content: center;
-  overflow: hidden;
-  max-height: 0px;
+  /* overflow: hidden;
+  max-height: 0px; */
   transition: all 0.3s ease-in;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
 }
 
 .list-categori ul li a {
   font-size: 16px;
   font-weight: 300;
   font-family: var(--font-primary);
+}
+input[type=checkbox] {
+  position: relative;
+  cursor: pointer;
+  margin-right: 6px;
+}
+input[type=checkbox]:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 0;
+  border: 2px solid #555555;
+  border-radius: 3px;
+  background-color: white;
+}
+input[type=checkbox]:checked:after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: 2px;
+  left: 6px;
 }
 /* end category */
 /* start filter price */
@@ -219,17 +272,48 @@ Body {
   padding: 10px 0px;
   border-radius: 30px;
   margin-left: 6px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
 }
 .sidear-wrap-3 ul li {
   display: inline-block;
-  margin-bottom: 10px;
-  margin-left: 7px;
+  /* margin-bottom: 10px;
+  margin-left: 14px; */
+  border: 1px solid #0000003d;
+  padding: 4px;
 }
-.option-color {
-  padding: 3px 7px;
-  border-radius: 60%;
+.apply-filter{
+  display: flex;
+  text-align: center;
+  margin-top: 24px;
+  justify-content:space-between;
+
 }
+.apply-filter button{
+  background-color: var(--primary);
+  padding: 12px;
+  border-radius: 8px;
+  font-weight: 600;
+  color: white;
+}
+
+.empty{
+  display: flex;
+  align-items: center;
+  margin-right: 17px;
+  color: rgb(88, 85, 85);
+  border: 1px solid rgba(255, 0, 0, 0.685);
+  padding: 14px 15px;
+  border-radius: 60px;
+  transition: all .4s;
+}
+
+.empty:hover{
+  background-color: red;
+  color: white;
+}
+/* .option-color {
+  padding: -1px;
+} */
 /* end color */
 /* start gender */
 .sidebar-wrap-4 {
@@ -476,6 +560,18 @@ Body {
   margin-top: 1rem;
 }
 
+.btn{
+  background: transparent;
+  border: none;
+  outline: none;
+  color: grey;
+}
+
+.btn.clicked i{
+  fill: red;
+}
+
+
 @media screen and (max-width:1026px) {
 
     .sections_group {
@@ -552,9 +648,6 @@ Body {
         grid-template-columns: repeat(2, 268px);
         gap: 20px;
         margin-left: 20px;
-    }
-    .sidebar{
-      
     }
 }
 
