--- a/product/style.css
+++ b/product/style.css
@@ -49,19 +49,28 @@ Body {
   margin-top: 37px;
 }
 
-.title-sidebar{
+.title-sidebar {
   font-size: 18px;
   text-transform: uppercase;
-  background-color: #5555553f;
-  padding-left: 6px;
+  /* background-color: #5555553f; */
+  /* padding-left: 6px; */
   margin-bottom: 6px;
+  border-left: 1px solid #8080806b;
+  border-bottom: 1px solid #8080806b;
+  border-top: 1px solid #8080806b;
+  padding: 10px;
 }
 
 .clear-sidebar{
   font-size: 18px;
   text-transform: uppercase;
-  background-color: #5555553f;
-  padding-left: 6px;
+  /* background-color: #5555553f; */
+  /* padding-left: 6px; */
+  margin-bottom: 6px;
+  border-left: 1px solid #8080806b;
+  border-bottom: 1px solid #8080806b;
+  border-top: 1px solid #8080806b;
+  padding: 10px;
 }
 .section-sidebar {
   /* margin: 60px 30px; */
@@ -596,7 +605,20 @@ input[type=checkbox]:checked:after {
 
 @media screen and (max-width:725px)
 {
+  .top-content-sidebar{
+    padding: 30px 0px;
+  }
 
+  .shop-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  .text{
+    margin: 0px;
+    text-align: left;
+    padding: 0px;
+  }
   .sidebar {
     position: absolute;
     background-color: aliceblue;
