--- a/css/utilities.css
+++ b/css/utilities.css
@@ -348,39 +348,6 @@
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.btn {
-  background-color: transparent;
-  color: var(--black);
-  position: relative;
-  overflow: hidden;
-  box-shadow: none;
-  transition-property: color;
-  transition-duration: 0.2s;
-  transition-delay: 0.1s;
-  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
-}
-.btn:hover {
-  color: var(--white);
-  transition-duration: 0.3s;
-  /* transition-delay: 0.5s; */
-  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
-}
-.btn::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  z-index: -1;
-  height: 100%;
-  background-color: var(--primary);
-  transition-property: width;
-  transition-duration: 0.5s;
-  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
-}
-.btn:hover::after {
-  width: 100%;
-}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -428,6 +395,69 @@
 .-mt-1 {
   margin-top: -0.25rem;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+.bg-clothing {
+  background-image: url(https://www.mammut.com/_next/image?url=https%3A%2F%2Fimages.ctfassets.net%2Fl595fda2nfqd%2FZwgKftvnUvFBZZUwJ2HPl%2F459e9566c97dfdd8696f1e4d299af349%2FFast_Hiking_SS22_Alpstein_DXH6455.jpg&w=4096&q=75);
+}
+.bg-footwear {
+  background-image: url(https://images.unsplash.com/photo-1576487503401-173ffc7c669c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGZvb3R3ZWFyfGVufDB8fDB8YmxhY2t8&auto=format&fit=crop&w=1000&q=75);
+}
+.bg-equipment {
+  background-image: url(https://images.unsplash.com/photo-1517172770828-dd2c3b6db6b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZXF1aXBtZW50JTIwY2xpbWJpbmd8ZW58MHx8MHxibGFja3w%3D&auto=format&fit=crop&w=1000&q=75);
+}
+.bg-clothing,
+.bg-equipment,
+.bg-footwear {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+  background-color: var(--gray);
+}
+.bg-clothing *,
+.bg-equipment *,
+.bg-footwear * {
+  z-index: 10;
+  position: relative;
+}
+.bg-clothing::after,
+.bg-equipment::after,
+.bg-footwear::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  top: auto;
+  height: 100%;
+  background-image: linear-gradient(
+    0deg,
+    rgba(27, 18, 15, 1) 0%,
+    rgba(244, 244, 245, 0) 75%
+  );
+  transition-duration: 0.5s;
+  transition-property: height;
+  transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
+}
+.bg-clothing:hover:after,
+.bg-equipment:hover::after,
+.bg-footwear:hover::after {
+  height: 50%;
+}
+.pb-20 {
+  padding-bottom: 5rem;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.min-h-screen {
+  min-height: 100vh;
+}
 @media screen and (max-width: 768px) {
   .sm-hidden {
     display: none;
@@ -462,5 +492,21 @@
   }
   .sm-items-center {
     align-items: center;
+  }
+  .sm-flex-col {
+    display: flex;
+    flex-direction: column;
+  }
+  .sm-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .sm-aspect-square {
+    aspect-ratio: 1/1;
+  }
+  .sm-grid-rows-none {
+    grid-template-rows: none;
+  }
+  .sm-h-max {
+    height: max-content;
   }
 }
