styles: Modify misc class style

--- a/css/main.css
+++ b/css/main.css
@@ -381,7 +381,7 @@ main {
     font-size: 3.75rem;
     line-height: 1;
   }
-  .sm-text-3xl {
+  .text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
