feat:add feature product

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
   --white: #fdfdfc;
   --gray: #f4f4f5;
   --font-primary: "Cabin";
-  --font-secondary: "Outfit";
+  --font-secondary: "text-smOutfit";
   --font-fallback: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
