--- a/product/style.css
+++ b/product/style.css
@@ -52,13 +52,10 @@ Body {
 .title-sidebar {
   font-size: 18px;
   text-transform: uppercase;
-  /* background-color: #5555553f; */
-  /* padding-left: 6px; */
+  display: flex;
+  /* justify-content: center; */
   margin-bottom: 6px;
-  border-left: 1px solid #8080806b;
-  border-bottom: 1px solid #8080806b;
-  border-top: 1px solid #8080806b;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .clear-sidebar{
@@ -76,6 +73,11 @@ Body {
   /* margin: 60px 30px; */
   /* overflow-y: scroll; */
   /* height: 60%; */
+}
+
+.title-sidebar h2{
+  font-size: 23px;
+  font-weight: 700;
 }
 
 .section-sidebar::-webkit-scrollbar-track {
@@ -124,7 +126,7 @@ Body {
   font-size: 18px;
   margin: 0;
   padding: 7px 0px 7px 0;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .list-categori {
@@ -132,14 +134,14 @@ Body {
   font-size: 14px;
   text-align: justify;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   /* overflow: hidden;
   max-height: 0px; */
   transition: all 0.3s ease-in;
   /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
 }
 
-.list-categori ul li a {
+.list-categori ul li label {
   font-size: 16px;
   font-weight: 300;
   font-family: var(--font-primary);
@@ -275,7 +277,7 @@ input[type=checkbox]:checked:after {
   font-size: 18px;
   margin: 0;
   padding: 7px 0px 7px 0;
-  font-weight: 900;
+  font-weight: 700;
 }
 .sidear-wrap-3 ul {
   padding: 10px 0px;
@@ -352,7 +354,7 @@ input[type=checkbox]:checked:after {
   font-size: 18px;
   margin: 0;
   padding: 7px 0px 7px 0;
-  font-weight: 900;
+  font-weight: 700;
 }
 /* end gender */
 /* start size */
@@ -367,13 +369,13 @@ input[type=checkbox]:checked:after {
   font-size: 18px;
   margin: 0;
   padding: 7px 0px 7px 0;
-  font-weight: 900;
+  font-weight: 700;
 }
 /* end size */
 /* start section grup */
 .sections_group {
   display: grid;
-  grid-template-columns: repeat(3, 282px);
+  grid-template-columns: repeat(3, 274px);
   gap: 20px;
   margin-left: 20px;
 }
@@ -569,23 +571,39 @@ input[type=checkbox]:checked:after {
   margin-top: 1rem;
 }
 
-.btn{
-  background: transparent;
-  border: none;
-  outline: none;
-  color: grey;
+.image-thumbnail {
+  position: relative;
+  min-width: 269px;
+  min-height: 267px;
 }
 
-.btn.clicked i{
-  fill: red;
+.section-btn {
+  position: absolute;
+  bottom: 10px;
+}
+.section-btn .btn{
+font-size: 14px;
+font-weight: 700;
+background-color: white;
+margin-left: 6px;
+border-radius: 10px;
+padding: 10px;
 }
 
-
+.section-btn .btn-1 i{
+font-size: 20px;
+background-color: white;
+padding: 17px;
+border-radius: 44px;
+position: absolute;
+left: 176%;
+bottom: 0px;
+}
 @media screen and (max-width:1026px) {
 
     .sections_group {
         display: grid;
-        grid-template-columns: repeat(3, 222px);
+        grid-template-columns: repeat(3, 274px);
         gap: 20px;
         margin-left: 20px;
     }
@@ -596,7 +614,7 @@ input[type=checkbox]:checked:after {
 
     .sections_group {
         display: grid;
-        grid-template-columns: repeat(3, 222px);
+        grid-template-columns: repeat(3, 274px);
         gap: 20px;
         margin-left: 20px;
     }
