--- a/product/style.css
+++ b/product/style.css
@@ -3,15 +3,35 @@ Body {
 }
 
 /* start sidebar top */
-.sidebar-close{
-  display:none;
+.sidebar-close {
+  display: none;
 }
 .sidebar-top {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+  padding: 100px 0;
+  color: var(--white);
+  background-image: url(https://images.unsplash.com/photo-1567401893414-76b7b1e5a7a5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y2xvdGhpbmdzfGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=60);
+  background-position: center;
+  background-size: contain;
+  background-repeat: repeat-x;
+  border-radius: 0.75rem;
+  overflow: hidden;
+}
+.sidebar-top::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.75;
+  background-color: var(--black);
+}
+.sidebar-top * {
+  z-index: 10;
+  position: relative;
 }
 
 .sidebar-top h1 {
@@ -22,31 +42,29 @@ Body {
 .content_wrapper {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
-  font-family: var(--font-fallback);
+  /* font-family: var(--font-fallback); */
 }
 
 .shop-section {
   grid-column: span 3 / span 3;
   /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
   /* border: 1px solid #80808033; */
-  border-radius: 9px;
+  /* border-radius: 9px; */
+  /* height: 500vh; */
 }
 
-.shop-title{
+.shop-title {
   display: flex;
-  justify-content: space-evenly;
-  align-items:center ;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.sidebar-1 {
+.sidebar {
   width: 100%;
   position: sticky;
-  top: 0;
-  /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
-  border-right: 1px solid #80808033;
-  border-radius: 9px;
+  top: 90px;
   height: max-content;
-  margin-top: 37px;
   z-index: 20;
 }
 
@@ -55,11 +73,11 @@ Body {
   text-transform: uppercase;
   display: flex;
   /* justify-content: center; */
-  margin-bottom: 6px;
-  padding: 10px;
+  margin-bottom: 10px;
+  /* padding: 10px; */
 }
 
-.clear-sidebar{
+.clear-sidebar {
   font-size: 18px;
   text-transform: uppercase;
   /* background-color: #5555553f; */
@@ -71,14 +89,18 @@ Body {
   padding: 10px;
 }
 .section-sidebar {
+  width: 80%;
   /* margin: 60px 30px; */
   /* overflow-y: scroll; */
   /* height: 60%; */
 }
 
-.title-sidebar h2{
+.title-sidebar h2 {
   font-size: 23px;
   font-weight: 700;
+}
+.section-sidebar {
+  overflow-y: auto;
 }
 
 .section-sidebar::-webkit-scrollbar-track {
@@ -99,16 +121,18 @@ Body {
 }
 /* start category */
 .sidebar-wrap {
+  margin-top: 10px;
   /* border: 1px solid black; */
   border-radius: 10px;
-  margin-right: 10px;
-  padding-left: 3px;
+  /* margin-right: 10px; */
+  /* padding-left: 3px; */
 }
 .categori {
   cursor: pointer;
   border-radius: 50px;
   display: flex;
-  margin: 10px 0;
+  /* margin: 10px 0; */
+  margin-bottom: 10px;
   align-items: center;
 }
 
@@ -126,8 +150,8 @@ Body {
 .categori h5 {
   font-size: 18px;
   margin: 0;
-  padding: 7px 0px 7px 0;
-  font-weight: 700;
+  /* padding: 7px 0px 7px 0; */
+  font-weight: 500;
 }
 
 .list-categori {
@@ -147,12 +171,12 @@ Body {
   font-weight: 300;
   font-family: var(--font-primary);
 }
-input[type=checkbox] {
+input[type="checkbox"] {
   position: relative;
   cursor: pointer;
   margin-right: 6px;
 }
-input[type=checkbox]:before {
+input[type="checkbox"]:before {
   content: "";
   display: block;
   position: absolute;
@@ -164,7 +188,7 @@ input[type=checkbox]:before {
   border-radius: 3px;
   background-color: white;
 }
-input[type=checkbox]:checked:after {
+input[type="checkbox"]:checked:after {
   content: "";
   display: block;
   width: 5px;
@@ -181,7 +205,7 @@ input[type=checkbox]:checked:after {
 /* end category */
 /* start filter price */
 .sidebar-warp-2 {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   /* border: 1px solid black; */
   border-radius: 10px;
   margin-right: 10px;
@@ -268,11 +292,11 @@ input[type=checkbox]:checked:after {
 /* end filter price */
 /* start color */
 .sidear-wrap-3 {
-  margin-top: 30px;
+  margin-top: 20px;
   /* border: 1px solid black; */
-  border-radius: 10px;
-  margin-right: 10px;
-  padding-left: 3px;
+  /* border-radius: 10px; */
+  /* margin-right: 10px;
+  padding-left: 3px; */
 }
 .sidear-wrap-3 h1 {
   font-size: 18px;
@@ -281,34 +305,47 @@ input[type=checkbox]:checked:after {
   font-weight: 700;
 }
 .sidear-wrap-3 ul {
-  padding: 10px 0px;
-  border-radius: 30px;
-  margin-left: 6px;
+  margin: 10px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  /* border-radius: 30px; */
+  /* margin-left: 6px; */
+  /* display: grid; */
   /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
 }
 .sidear-wrap-3 ul li {
-  display: inline-block;
+  /* display: inline-block; */
   /* margin-bottom: 10px;
   margin-left: 14px; */
-  border: 1px solid #0000003d;
-  padding: 4px;
+  border: 2px solid var(--gray);
+  box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  /* padding: 2px 4px; */
+  height: 2rem;
+  width: 2rem;
+  display: grid;
+  place-items: center;
 }
-.apply-filter{
+.sidear-wrap-3 .option-color {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+.apply-filter {
   display: flex;
   text-align: center;
-  margin-top: 24px;
-  justify-content:space-between;
-
+  margin-top: 20px;
+  justify-content: space-between;
 }
-.apply-filter button{
+.apply-filter button {
   background-color: var(--primary);
-  padding: 12px;
-  border-radius: 8px;
-  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 0.25rem;
+  font-weight: 500;
   color: white;
+  text-transform: capitalize;
 }
 
-.empty{
+.empty {
   display: flex;
   align-items: center;
   margin-right: 17px;
@@ -316,10 +353,10 @@ input[type=checkbox]:checked:after {
   border: 1px solid rgba(255, 0, 0, 0.685);
   padding: 14px 15px;
   border-radius: 60px;
-  transition: all .4s;
+  transition: all 0.4s;
 }
 
-.empty:hover{
+.empty:hover {
   background-color: red;
   color: white;
 }
@@ -329,27 +366,31 @@ input[type=checkbox]:checked:after {
 /* end color */
 /* start gender */
 .sidebar-wrap-4 {
-  margin-top: 30px;
+  margin-top: 20px;
   /* border: 1px solid black; */
   border-radius: 10px;
-  margin-right: 10px;
-  padding-left: 9px;
-  padding-bottom: 8px;
+  /* margin-right: 10px; */
+  /* padding-left: 9px; */
+  /* padding-bottom: 8px; */
 }
 
 .sidebar-wrap-4 button {
   border: 1px solid var(--primary);
-  padding: 7px;
+  padding: 7.5px 15px;
   font-weight: 700;
-  color: rgb(88, 85, 85);
-  border-radius: 4px;
-  margin-top: 8px;
-  transition: 0.4s all;
+  color: var(--black);
+  border-radius: 0.25rem;
+  margin-top: 10px;
+  transition: 0.2s all;
+}
+
+.sidebar-wrap-4 button:not(:last-child) {
+  margin-right: 10px;
 }
 
 .sidebar-wrap-4 button:hover {
   background-color: var(--primary);
-  color: aliceblue;
+  color: var(--white);
 }
 .sidebar-wrap-4 h1 {
   font-size: 18px;
@@ -360,11 +401,11 @@ input[type=checkbox]:checked:after {
 /* end gender */
 /* start size */
 .sidebar-wrap-5 {
-  margin-top: 30px;
+  margin-top: 20px;
   /* border: 1px solid black; */
   border-radius: 10px;
-  margin-right: 10px;
-  padding-left: 3px;
+  /* margin-right: 10px; */
+  /* padding-left: 3px; */
 }
 .sidebar-wrap-5 h1 {
   font-size: 18px;
@@ -372,13 +413,23 @@ input[type=checkbox]:checked:after {
   padding: 7px 0px 7px 0;
   font-weight: 700;
 }
+.sidebar-wrap-5 .option-size {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.sidebar-wrap-5 .option-size button {
+  background-color: var(--gray);
+  padding: 5px 15px;
+}
 /* end size */
 /* start section grup */
 .sections_group {
   display: grid;
-  grid-template-columns: repeat(3, 274px);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin-left: 20px;
+  /* margin-left: 20px; */
 }
 
 .card-shop {
@@ -427,7 +478,8 @@ input[type=checkbox]:checked:after {
   text-decoration: underline;
 }
 .text {
-  margin: 40px;
+  /* margin: 40px; */
+  /* margin-bottom: 20px; */
 }
 
 .category-name h1 {
@@ -515,10 +567,10 @@ input[type=checkbox]:checked:after {
   cursor: pointer;
 }
 /* end section grup */
-.Filter {
+.filter {
   background-color: var(--primary);
-  border-radius: 7px;
-  padding:12px;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1.75rem;
 }
 
 .color-list {
@@ -572,7 +624,7 @@ input[type=checkbox]:checked:after {
   margin-top: 1rem;
 }
 
-.sort-section{
+.sort-section {
   margin: 11px 0px;
 }
 
@@ -584,12 +636,12 @@ input[type=checkbox]:checked:after {
 }
 
 /* hover images */
-.image-thumbnail img{
+.image-thumbnail img {
   position: absolute;
   top: 0;
   left: 0;
 }
-.image-thumbnail img:hover{
+.image-thumbnail img:hover {
   opacity: 0;
 }
 .image-thumbnail img.hov-img:hover {
@@ -597,60 +649,54 @@ input[type=checkbox]:checked:after {
   cursor: pointer;
 }
 
-
-
 .section-btn {
   position: absolute;
   bottom: 10px;
 }
-.section-btn .btn{
-font-size: 14px;
-font-weight: 700;
-background-color: white;
-margin-left: 6px;
-border-radius: 10px;
-padding: 10px;
+.section-btn .btn {
+  font-size: 14px;
+  font-weight: 700;
+  background-color: white;
+  margin-left: 6px;
+  border-radius: 10px;
+  padding: 10px;
 }
 
-.section-btn .btn-1 i{
-font-size: 20px;
-background-color: white;
-padding: 17px;
-border-radius: 44px;
-position: absolute;
-left: 176%;
-bottom: 0px;
+.section-btn .btn-1 i {
+  font-size: 20px;
+  background-color: white;
+  padding: 17px;
+  border-radius: 44px;
+  position: absolute;
+  left: 176%;
+  bottom: 0px;
 }
-select{
+select {
   width: 200px;
   outline: none;
   border: 1px solid var(--primary);
   padding: 10px;
+  background-color: var(--white);
 }
-@media screen and (max-width:1026px) {
-
-    .sections_group {
-        display: grid;
-        grid-template-columns: repeat(3, 274px);
-        gap: 20px;
-        margin-left: 20px;
-    }
-    
-}
-
-@media screen and (max-width:1294px){
-
-    .sections_group {
-        display: grid;
-        grid-template-columns: repeat(3, 274px);
-        gap: 20px;
-        margin-left: 20px;
-    }
+@media screen and (max-width: 1026px) {
+  .sections_group {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    /* margin-left: 20px; */
+  }
 }
 
+@media screen and (max-width: 1294px) {
+  .sections_group {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    /* margin-left: 20px; */
+  }
+}
 
-@media screen and (max-width:725px)
-{
+@media screen and (max-width: 725px) {
   /* .top-content-sidebar{
     padding: 30px 0px;
   } */
@@ -658,191 +704,207 @@ select{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-  .text{
+  }
+  .text {
     margin: 0px;
     text-align: left;
     padding: 0px;
   }
   .sidebar {
-    position: absolute;
-    background-color: aliceblue;
-    color:black;
-    width: 90%;
-    height: 66%;
-    top: 218px;
-    left: 28px;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
+    position: fixed;
+    background-color: var(--white);
+    color: black;
+    width: 100%;
+    padding: 10% 10%;
+    margin: 0 auto;
+    height: calc(100vh - 80px);
+    top: 80px;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+    transform-origin: top right;
+    transform: translate(0, 0) scaleY(0);
+    transition-property: transform;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.87, 0, 0.13, 1);
   }
 
   .sidebar.active {
-    transform: translate(-1%, -2%) scale(1);
+    transform: translate(0, 0) scale(1);
   }
 
-  .apply-filter{
+  .apply-filter {
     justify-content: flex-start;
-    padding-left: 10px;
+    /* padding-left: 10px; */
   }
-  .apply-filter .empty{
-   margin-left: 12px;
+  .apply-filter .empty {
+    margin-left: 12px;
   }
-.sidebar-close{
-  display:block;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 1.25rem;
-  font-weight: bold;
-  border: 1px solid black;
-  border-radius: 30px;
-  position: absolute;
-  top: -14px;
-  left: -8px;
-  background: azure;
-}
-
-.list-categori {
-  /* margin-left: 5px; */
-  font-size: 14px;
-  text-align: justify;
-  display: flex;
-  /* justify-content: center; */
-  overflow: hidden;
-  max-height: 0px;
-  transition: all 0.3s ease-in;
-  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
-}
-
-.-wrap-option-color{
-  overflow: hidden;
-  max-height: 0px;
-  transition: all 0.3s ease-in;
-}
-.option-gender{
-  overflow: hidden;
-  max-height: 0px;
-  transition: all 0.3s ease-in;
-}
-.option-size{
-  overflow: hidden;
-  max-height: 0px;
-  transition: all 0.3s ease-in;
-}
-#overlay{
-  position:fixed;
-  bottom:0px;
-  top:0px;
-  left:0px;
-  right:0px;
-
-  
-  z-index:-1;
-}
-
-#overlay.active{
-  opacity:1;
-  pointer-events:all;
-}
-.categori{
-  padding-left: 12px;
-  margin: 10px 0;
-}
-.categori::after{
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: 900; 
-  content: "\f107";
-  position: absolute;
-  right:65px;
-  
-}
-.title-1 {
-  padding-left: 12px;
-  cursor: pointer;
-  border-radius: 50px;
-  display: flex;
-  margin: 10px 0;
-  align-items: center;
-}
-.title-1::after{
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: 900; 
-  content: "\f107";
-  position: absolute;
-  right:65px;
-}
-.title-2 {
-  padding-left: 6px;
-  cursor: pointer;
-  border-radius: 50px;
-  display: flex;
-  margin: 10px 0;
-  align-items: center;
-}
-.title-2::after{
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: 900; 
-  content: "\f107";
-  position: absolute;
-  right:65px;
-}
-.size {
-  padding-left: 20px;
-  cursor: pointer;
-  border-radius: 50px;
-  display: flex;
-  margin: 10px 0;
-  align-items: center;
-}
-.size::after{
-  font-family: "Font Awesome 5 Free"; 
-  font-weight: 900; 
-  content: "\f107";
-  position: absolute;
-  right:65px;
-}
-}
-
-@media screen and (max-width:638px){
-
-    .sections_group {
-        display: grid;
-        grid-template-columns: repeat(2, 268px);
-        gap: 20px;
-        margin-left: 20px;
-    }
-}
-
-@media screen and (max-width:496px){
-
-    .sections_group {
-        display: grid;
-        grid-template-columns: repeat(1, 346px);
-        gap: 20px;
-        
-    }
-
-    .sidebar-top {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 32px 0px;
-    }
-
-    .section-btn .btn-1 i {
-      font-size: 20px;
-      background-color: white;
-      padding: 17px;
-      border-radius: 44px;
-      position: absolute;
-      left: 231%;
-      bottom: 0px;
+  .sidebar-close {
+    display: block;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    border-width: 1px;
+    border-radius: 30px;
+    position: absolute;
+    top: 10px;
+    right: 10%;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: grid;
+    place-items: center;
+    background: var(--gray);
   }
 
-  .select-box__current{
+  .list-categori {
+    /* margin-left: 5px; */
+    font-size: 14px;
+    text-align: justify;
+    display: flex;
+    /* justify-content: center; */
+    overflow: hidden;
+    /* max-height: 0px; */
+    transition: all 0.3s ease-in;
+    /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
+  }
+
+  .-wrap-option-color {
+    overflow: hidden;
+    /* max-height: 0px; */
+    transition: all 0.3s ease-in;
+  }
+  .option-gender {
+    overflow: hidden;
+    /* max-height: 0px; */
+    transition: all 0.3s ease-in;
+  }
+  .option-size {
+    overflow: hidden;
+    /* max-height: 0px; */
+    transition: all 0.3s ease-in;
+  }
+  #overlay {
+    position: fixed;
+    bottom: 0px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+
+    z-index: -1;
+  }
+
+  #overlay.active {
+    opacity: 1;
+    pointer-events: all;
+  }
+  .categori {
+    /* padding-left: 12px; */
+    margin: 10px 0;
+  }
+  .categori::after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f107";
+    position: absolute;
+    right: 65px;
+    display: none;
+  }
+  .title-1 {
+    /* padding-left: 12px; */
+    cursor: pointer;
+    border-radius: 50px;
+    display: flex;
+    margin: 10px 0;
+    align-items: center;
+  }
+  .title-1::after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f107";
+    position: absolute;
+    right: 65px;
+    display: none;
+  }
+  .title-2 {
+    /* padding-left: 6px; */
+    cursor: pointer;
+    border-radius: 50px;
+    display: flex;
+    margin: 10px 0;
+    align-items: center;
+  }
+  .title-2::after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f107";
+    position: absolute;
+    right: 65px;
+    display: none;
+  }
+  .size {
+    /* padding-left: 20px; */
+    cursor: pointer;
+    border-radius: 50px;
+    display: flex;
+    margin: 10px 0;
+    align-items: center;
+  }
+  .size::after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f107";
+    position: absolute;
+    right: 65px;
+    display: none;
+  }
+}
+
+@media screen and (max-width: 638px) {
+  .sections_group {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    /* margin-left: 20px; */
+  }
+}
+
+@media screen and (max-width: 496px) {
+  .shop-section {
+    grid-column: span 4 / span 4;
+  }
+
+  .sections_group {
+    display: grid;
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    margin-left: 0;
+    margin: 0 auto;
+  }
+
+  .sidebar-top {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    /* padding: 32px 0px; */
+  }
+
+  .section-btn .btn-1 i {
+    font-size: 20px;
+    background-color: white;
+    padding: 17px;
+    border-radius: 44px;
+    position: absolute;
+    left: 231%;
+    bottom: 0px;
+  }
+
+  .select-box__current {
     margin: 12px 0px;
   }
-    
 }
